# git-repo-language-trends

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  setup.cfg
.github/workflows/: CI.yml  CICD.yml  PyPI-deploy.yml
cmd/: args.go  main.go  output.go  separated_values_output.go  utils.go
cmd/git-repo-language-trends/: args.go  main.go  output.go  progress.go  progress_test.go  utils.go  utils_test.go
py-implementation/: main.py  separated_values_output.py  utils.py
py-implementation/tests/: test_progress.py
scripts/: generate-png-and-svg-regression-samples.sh  generate-png-and-svg-samples.sh
src/: benchmark.rs  gitutils.rs  main.rs  output.rs  progressbar.rs  repoutils.rs  tsv_output.rs  utils.rs
src/git_repo_language_trends/: __init__.py
src/git_repo_language_trends/_internal/: args.go  args.py  main.go  main.py  matplotlib_output.py  output.py  progress.py  separated_values_output.py  svg_output.py  test_utils.py  tsv_output.py  utils.py
src/git_repo_language_trends/_internal/tests/: test_utils.py
tests/: __init__.py  conftest.py  integration_tests.rs  no-extension  test_cli.py  trailing-dot.  utils.py
tests/data/: expected-shallow.csv
