[package]
authors = ["Martin Nordholts <enselic@gmail.com>"]
description = "Prints tabulated data about programming language usage over time in a git repository for a given set of file extensions."
documentation = "https://github.com/Enselic/git-repo-language-trends/blob/main/README.md"
edition = "2018"
homepage = "https://github.com/Enselic/git-repo-language-trends"
license = "MIT"
name = "git-repo-language-trends"
repository = "https://github.com/Enselic/git-repo-language-trends"
version = "0.1.2"

[dependencies]
git2 = "0.13.16"
structopt = "0.3.21"

[dev-dependencies]
assert_cmd = "1.0.2"
