[metadata]
name = git-repo-language-trends
version = attr: git_repo_language_trends.__version__
author = Martin Nordholts
author_email = enselic@gmail.com
description = Plots programming language usage over time in a git repository to an SVG file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Enselic/git-repo-language-trends
project_urls =
    Bug Tracker = https://github.com/Enselic/git-repo-language-trends/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6
install_requires =
    pygit2 >= 1.2
    matplotlib >= 3.1

[options.packages.find]
where = src
exclude =
    git_repo_language_trends._internal.tests

[options.entry_points]
console_scripts =
    git-repo-language-trends = git_repo_language_trends:main

[flake8]
max-line-length = 100
